# projyae

./: .gitignore  CMakeLists.txt  LICENSE
core/: CMakeLists.txt  utilities.h
core/audio/: AudioPlayer.cpp  AudioPlayer.h  FlacAudioStream.cpp  FlacAudioStream.h  IAudioStream.cpp  IAudioStream.h  Mp3AudioStream.cpp  Mp3AudioStream.h  WavAudioStream.cpp  WavAudioStream.h  drlibs.c  drlibs.h  miniaudio.c  miniaudio.h  stbvorbis.c  stbvorbis.h
core/backends/: IRenderBackend.h  RenderBackend.cpp  RenderBackend.h
core/backends/metal/: MetalBackend.h
core/backends/opengl/: GlBackend.cpp  GlBackend.hpp
core/engine/: Engine.cpp  Engine.h
core/render/: IRenderBackend.cpp
core/render/interface/: ICommandBuffer.cpp  ICommandBuffer.h  IRenderBackend.cpp  IRenderBackend.h
core/render/mesh/: Mesh.cpp  Mesh.h
core/render/metal/: MetalBackend.h  MetalBackend.mm
core/render/opengl/: GlBackend.cpp  GlBackend.hpp  GlCommandBuffer.cpp  GlCommandBuffer.h  SharedCommandBuffer.h
player-android/: CMakeLists.txt  lib.cpp
player-darwin/: CMakeLists.txt  main.mm
player-desktop/: CMakeLists.txt  main.cpp
player-win32/: CMakeLists.txt  main.cpp
